fixed some alignment issues

--- a/css/index.scss
+++ b/css/index.scss
@@ -106,6 +106,8 @@ body {
     height: 2px;
     // background-color: map-get($map: $current-theme, $key: color);
     // same as above but with a 50% opacity
+    border-radius: 1px;
+    border-color: transparent;
     background-color: rgba(155, 89, 182 , 0.5);
     
 }
@@ -120,7 +122,7 @@ body {
     align-items: center;
 
     img {
-        margin-right: 0.5em;
+        margin-right: 2em;
     }
 }
 
